--- a/Style.css
+++ b/Style.css
@@ -17,3 +17,27 @@ main {
     justify-content: center;
     position: relative;
 }
+
+
+main > section img {
+    height: 300px;
+    margin: 15px 0;
+    width: 300px;
+}
+
+main > section button {
+    background-color: #FF69B4;
+    border: none;
+    border-radius: 4px;
+    color: azure;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: -0.6px;
+    line-height: 20px;
+    text-transform: uppercase;
+}
+
+#detalhes-container {
+    
+}
