--- a/Style.css
+++ b/Style.css
@@ -39,5 +39,8 @@ main > section button {
 }
 
 #detalhes-container {
-    
+    font-weight: bold;
+    list-style-type: none;
+    height: 30px;
+    width: 90%;
 }
